<resources>
    <string name="app_name">FindEasy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="exemplo_email">exemplo@teste.com.br</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="local_cadastrado_sucesso">Local cadastrado com sucesso!</string>
    <string name="usuario_cadastrado_sucesso">Usuário cadastrado com sucesso!</string>
    <string name="salvar">Salvar</string>
    <string name="btn_sim">Sim</string>
    <string name="btn_nao">Não</string>
    <string name="informe_nome_usuario">Informe o nome do Usuário!</string>
    <string name="informe_celular">Informe o celular.</string>
    <string name="informe_email">Informe o e-mail.</string>
    <string name="informe_senha">Informe a senha.</string>
    <string name="informe_descricao_local">Informe a descrição do Local!</string>
    <string name="informe_telefone">Informe o telefone!</string>
    <string name="informe_categoria">Informe a categoria!</string>
    <string name="informe_endereco">Informe o endereco!</string>
    <string name="informe_localizacao">Informe a localizacao!</string>
    <string name="atencao">Atenção</string>
    <string name="cadastrando_usuario">Cadastrando Usuário...</string>
    <string name="cadastrando_local">Cadastrando Local...</string>
    <string name="aguarde">Aguarde...</string>
    <string name="erro_ao_cadastrar_usuario">Erro ao cadastrar o usuário</string>
    <string name="erro_ao_cadastrar_local">Erro ao cadastrar o Local</string>
    <string name="email_invalido">E-Mail Invalido!</string>
    <string name="ainda_nao_sou_cadastrado">Ainda não sou cadastrado</string>
    <string name="entrar">Entrar</string>
    <string name="bem_vindo_ao_findeasy">Bem-Vindo ao FindEasy</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="voltar">Voltar</string>
    <string name="avan_ar">Avançar</string>
    <string name="codigo">Codigo</string>
    <string name="informe_o_codigo_de_recuperacao">Informe o codigo de recuperação\nenviado para seu E-mail</string>
    <string name="informe_o_e_mail_para_nrecuperacao_da_senha">Informe o E-Mail para\nrecuperação da senha</string>
    <string name="comunicando_com_servidor">Comunicando com servidor.</string>
    <string name="erro_ao_comunicar_com_servidor">Erro ao comunicar com o servidor.</string>
    <string name="informe_o_codigo">Informe o Código!</string>
    <string name="codigo_invalido">Código invalido!</string>
    <string name="senha_curta">Senha muito curta!</string>
    <string name="concluir">Concluir</string>
    <string name="senha_alterada_com_sucesso">Senha alterada com sucesso!</string>
    <string name="email_ou_senha_invalida">E-Mail ou Senha invalida.</string>
    <string name="principal">Principal</string>
    <string name="meus_locais">Meus Locais</string>
    <string name="perfil">Perfil</string>
    <string name="sair">Sair</string>
    <string name="localizacao">Localização</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="local">Local</string>
    <string name="descricao">Descrição</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereco</string>
    <string name="categoria">Categoria</string>
    <string name="aguarde_o_servidor_de_gps">Aguarde o servidor de GPS ativar.</string>
    <string name="cadstro_local">Cadastro de Local</string>
    <string name="hint_pesquisar">Pesquisar...</string>
    <string name="proximo">Proximo</string>
    <string name="sel_localizacao">Sel. Localização</string>
    <string name="cadastro_local">Cadastro de Local</string>
    <string name="produtos_servicos">Produtos / Serviços</string>
    <string name="fotos_local">Fotos Local</string>
    <string name="velocidade">Velocidade</string>
    <string name="limpesa">Limpesa</string>
    <string name="qualidade">Qualidade</string>
    <string name="atendimento">Atendimento</string>
</resources>
