<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.psousa.findeasy.fragment.ViewCadastroLocal">

        <!-- TODO: Update blank fragment layout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="7dp">

                    <TextView
                        android:id="@+id/header_localizacao"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@android:color/darker_gray"
                        android:gravity="center_vertical"
                        android:minHeight="30dp"
                        android:padding="5dp"
                        android:text="@string/localizacao"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:id="@+id/localizacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/edt_cadastro_local_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/latitude"
                            android:inputType="text|number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/edt_cadastro_local_longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/longitude"
                            android:inputType="text|number" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="7dp">

                    <TextView
                        android:id="@+id/header_local"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@android:color/darker_gray"
                        android:gravity="center_vertical"
                        android:minHeight="30dp"
                        android:padding="5dp"
                        android:text="@string/local"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:id="@+id/local"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/edt_cadastro_local_descricao"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/descricao"
                            android:inputType="text|textCapSentences"
                            android:focusableInTouchMode="true">
                            <requestFocus/>
                        </EditText>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/edt_cadastro_local_telefone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/telefone"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/edt_cadastro_local_endereco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/endereco"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/edt_cadastro_local_categoria"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
    </ScrollView>
</FrameLayout>
